--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Zach!</title>
   </head>
   <body>
-
+    <h1>Hello, Code School!</h1>
+    <ul>
+      <li>I want to learn everything in the world</li>
+      <li>I also want to learn more about Node.js</li>
+    </ul>
   </body>
 </html>
